--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Create Buildx [multi-builder]
       run: docker buildx create --name="multi-builder" --platform="linux/amd64,linux/amd64/v2,linux/amd64/v3,linux/386"
     - name: Build the Docker image
-      run: docker buildx build --push --builder="multi-builder" --platform="linux/amd64,linux/arm64,linux/arm64/v8,linux/ppc64le,linux/s390x" --tag="gegedesembri/kms:latest" --tag="gegedesembri/kms:0.2" .
+      run: docker buildx build --push --builder="multi-builder" --platform="linux/386linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/riscv64,linux/s390x" --tag="gegedesembri/kms:latest" --tag="gegedesembri/kms:0.2" .
